# lab3_learning

./: .gitignore  CMakeLists.txt  README.md
lib_dynamic/: CMakeLists.txt  class_d.cpp  class_d.h  strucrt_d.cpp  strucrt_d.h
lib_static/: CMakeLists.txt  class_s.cpp  class_s.h  strucrt_s.cpp  strucrt_s.h
main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests.cpp
